--- a/Klike/Interfaces/ActivityEvent.xib
+++ b/Klike/Interfaces/ActivityEvent.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -28,13 +28,13 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8h" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wfx-3z-ZEN">
-                        <rect key="frame" x="291" y="13" width="14" height="14"/>
+                        <rect key="frame" x="291" y="13" width="13.5" height="14"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                         <color key="textColor" red="0.71372549019999998" green="0.71372549019999998" blue="0.73333333329999995" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t77-4V-7G4">
-                        <rect key="frame" x="79" y="9" width="207" height="19"/>
+                        <rect key="frame" x="79" y="9" width="207.5" height="19"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -46,8 +46,9 @@
                             <constraint firstAttribute="width" constant="24" id="dme-HB-caU"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hqb-od-Z6Y">
-                        <rect key="frame" x="112" y="37" width="193" height="14"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YWc-06-4xP">
+                        <rect key="frame" x="107" y="29" width="197.5" height="30.5"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <attributedString key="attributedText">
                             <fragment content="Label">
                                 <attributes>
@@ -57,23 +58,23 @@
                                 </attributes>
                             </fragment>
                         </attributedString>
-                        <nil key="highlightedColor"/>
-                    </label>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    </textView>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="BXQ-eJ-FAs" secondAttribute="bottom" id="4u1-zU-UCs"/>
                     <constraint firstItem="wfx-3z-ZEN" firstAttribute="baseline" secondItem="t77-4V-7G4" secondAttribute="baseline" constant="-2" id="8HC-9j-07I"/>
-                    <constraint firstItem="wfx-3z-ZEN" firstAttribute="trailing" secondItem="hqb-od-Z6Y" secondAttribute="trailing" id="9QI-zN-QOc"/>
                     <constraint firstItem="CFP-3W-GS2" firstAttribute="leading" secondItem="aY7-py-pce" secondAttribute="trailing" constant="17" id="9iQ-0r-NWG"/>
                     <constraint firstItem="aY7-py-pce" firstAttribute="leading" secondItem="xDF-rU-pP8" secondAttribute="leading" id="CSu-53-kca"/>
                     <constraint firstItem="aY7-py-pce" firstAttribute="top" secondItem="xDF-rU-pP8" secondAttribute="top" id="D0C-yf-ZsD"/>
-                    <constraint firstItem="hqb-od-Z6Y" firstAttribute="leading" secondItem="CFP-3W-GS2" secondAttribute="trailing" constant="7" id="Esk-ft-FwF"/>
+                    <constraint firstItem="YWc-06-4xP" firstAttribute="leading" secondItem="CFP-3W-GS2" secondAttribute="trailing" constant="2" id="FlA-Ci-v7K"/>
                     <constraint firstItem="t77-4V-7G4" firstAttribute="top" secondItem="xDF-rU-pP8" secondAttribute="top" constant="9" id="NQm-HY-xMX"/>
+                    <constraint firstItem="YWc-06-4xP" firstAttribute="trailing" secondItem="wfx-3z-ZEN" secondAttribute="trailing" id="SMk-sr-zuP"/>
                     <constraint firstItem="BXQ-eJ-FAs" firstAttribute="top" secondItem="CFP-3W-GS2" secondAttribute="bottom" constant="8" id="WUi-Lf-KoD"/>
                     <constraint firstItem="BXQ-eJ-FAs" firstAttribute="top" secondItem="aY7-py-pce" secondAttribute="bottom" id="XIf-pg-smP"/>
-                    <constraint firstItem="hqb-od-Z6Y" firstAttribute="centerY" secondItem="CFP-3W-GS2" secondAttribute="centerY" id="XtH-aP-9fL"/>
                     <constraint firstItem="wfx-3z-ZEN" firstAttribute="leading" secondItem="t77-4V-7G4" secondAttribute="trailing" constant="5" id="Zf9-1L-XzN"/>
                     <constraint firstItem="wfx-3z-ZEN" firstAttribute="baseline" secondItem="t77-4V-7G4" secondAttribute="baseline" id="nXe-Ie-ctV"/>
+                    <constraint firstItem="YWc-06-4xP" firstAttribute="centerY" secondItem="CFP-3W-GS2" secondAttribute="centerY" constant="0.25" id="qDr-Yq-la8"/>
                     <constraint firstAttribute="trailing" secondItem="BXQ-eJ-FAs" secondAttribute="trailing" id="r1A-VC-Usb"/>
                     <constraint firstAttribute="trailing" secondItem="wfx-3z-ZEN" secondAttribute="trailing" constant="15" id="vEg-o8-aji"/>
                     <constraint firstItem="t77-4V-7G4" firstAttribute="leading" secondItem="aY7-py-pce" secondAttribute="trailing" constant="15" id="y0s-Y3-PXM"/>
@@ -86,7 +87,7 @@
                 </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="descriptionLabel" destination="hqb-od-Z6Y" id="bNn-OP-SSn"/>
+                <outlet property="descriptionTextView" destination="YWc-06-4xP" id="EWG-pa-9DZ"/>
                 <outlet property="eventImageView" destination="aY7-py-pce" id="RvJ-jB-6N4"/>
                 <outlet property="eventTitleLabel" destination="t77-4V-7G4" id="Vf5-V8-2Cc"/>
                 <outlet property="iconImageView" destination="CFP-3W-GS2" id="REo-Ym-fWH"/>
