--- a/Klike/Interfaces/ActivityFollow.xib
+++ b/Klike/Interfaces/ActivityFollow.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -37,49 +38,51 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="xOA-o4-bI4"/>
                                 <exclude reference="C3G-Y3-E9X"/>
                                 <exclude reference="QIg-gG-JWK"/>
                                 <exclude reference="sWa-hn-tBf"/>
+                                <exclude reference="xOA-o4-bI4"/>
                             </mask>
                         </variation>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="start follow you" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QZd-qh-s7y">
-                        <rect key="frame" x="48" y="13" width="232" height="14"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
-                        <color key="textColor" red="0.70196078429999997" green="0.70196078429999997" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bc6-3n-S9r">
+                        <rect key="frame" x="43" y="5" width="232.5" height="30.5"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <attributedString key="attributedText">
+                            <fragment content="started following">
+                                <attributes>
+                                    <color key="NSColor" red="0.70196078429999997" green="0.70196078429999997" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
+                                    <font key="NSFont" size="12" name="HelveticaNeue"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    </textView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="QZd-qh-s7y" firstAttribute="baseline" secondItem="ssh-ny-XyR" secondAttribute="baseline" id="6Ba-WM-OJz"/>
+                    <constraint firstItem="ssh-ny-XyR" firstAttribute="leading" secondItem="Bc6-3n-S9r" secondAttribute="trailing" constant="14.5" id="9Lb-Ev-EBn"/>
                     <constraint firstItem="rYY-tn-hFs" firstAttribute="top" secondItem="CpO-A6-yBm" secondAttribute="top" priority="999" constant="48" id="AjA-0r-fjH"/>
                     <constraint firstItem="Zgz-nH-mLv" firstAttribute="top" secondItem="CpO-A6-yBm" secondAttribute="top" constant="8" id="B70-rU-T4Q"/>
+                    <constraint firstItem="Bc6-3n-S9r" firstAttribute="leading" secondItem="Zgz-nH-mLv" secondAttribute="trailing" constant="3" id="DuS-Ln-Esf"/>
                     <constraint firstItem="ssh-ny-XyR" firstAttribute="top" secondItem="CpO-A6-yBm" secondAttribute="top" constant="13" id="Ikd-qY-vSb"/>
                     <constraint firstAttribute="trailing" secondItem="ssh-ny-XyR" secondAttribute="trailing" constant="16" id="Mbp-bz-awG"/>
                     <constraint firstAttribute="bottom" secondItem="rYY-tn-hFs" secondAttribute="bottom" id="P6a-cg-miN"/>
                     <constraint firstItem="rYY-tn-hFs" firstAttribute="top" secondItem="Zgz-nH-mLv" secondAttribute="bottom" constant="8" id="RhE-4z-YEb"/>
-                    <constraint firstItem="ssh-ny-XyR" firstAttribute="leading" secondItem="QZd-qh-s7y" secondAttribute="trailing" constant="10" id="S0s-vc-0X2"/>
-                    <constraint firstItem="QZd-qh-s7y" firstAttribute="centerY" secondItem="Zgz-nH-mLv" secondAttribute="centerY" id="VQr-7M-ov5"/>
                     <constraint firstItem="rYY-tn-hFs" firstAttribute="top" secondItem="Zgz-nH-mLv" secondAttribute="bottom" constant="8" id="cXg-78-iCN"/>
                     <constraint firstItem="Zgz-nH-mLv" firstAttribute="leading" secondItem="CpO-A6-yBm" secondAttribute="leading" constant="16" id="e1F-OV-Vrm"/>
-                    <constraint firstItem="ssh-ny-XyR" firstAttribute="leading" secondItem="QZd-qh-s7y" secondAttribute="trailing" constant="5" id="gaF-XK-w91"/>
                     <constraint firstAttribute="trailing" secondItem="rYY-tn-hFs" secondAttribute="trailing" id="hO4-od-fn5"/>
-                    <constraint firstItem="QZd-qh-s7y" firstAttribute="leading" secondItem="Zgz-nH-mLv" secondAttribute="trailing" constant="8" id="mM8-BD-e6z"/>
-                    <constraint firstItem="QZd-qh-s7y" firstAttribute="leading" secondItem="Zgz-nH-mLv" secondAttribute="trailing" constant="7" id="ooX-Ra-G3Q"/>
+                    <constraint firstItem="Bc6-3n-S9r" firstAttribute="top" secondItem="CpO-A6-yBm" secondAttribute="topMargin" constant="-3" id="sa3-v7-0ec"/>
                     <constraint firstItem="rYY-tn-hFs" firstAttribute="leading" secondItem="CpO-A6-yBm" secondAttribute="leading" id="vRj-3y-uKB"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
                         <exclude reference="cXg-78-iCN"/>
-                        <exclude reference="VQr-7M-ov5"/>
-                        <exclude reference="ooX-Ra-G3Q"/>
-                        <exclude reference="gaF-XK-w91"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="descriptionLabel" destination="QZd-qh-s7y" id="BJF-G9-XPV"/>
+                <outlet property="descriptionTextView" destination="Bc6-3n-S9r" id="0AM-WF-jZX"/>
                 <outlet property="timeLabel" destination="ssh-ny-XyR" id="vVC-P8-KIm"/>
                 <outlet property="userImageView" destination="Zgz-nH-mLv" id="5rc-Bn-mvY"/>
             </connections>
