Fix event page cell separator height

--- a/Klike/Sources/Controllers/Event/KLEventEarniedPageCell.xib
+++ b/Klike/Sources/Controllers/Event/KLEventEarniedPageCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -184,10 +184,10 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstItem="fjD-te-Omo" firstAttribute="top" secondItem="qIF-Ir-B9R" secondAttribute="top" id="1Mr-Ug-3W0"/>
-                    <constraint firstAttribute="bottom" secondItem="ooW-98-atS" secondAttribute="bottom" constant="3" id="Dck-7M-BlV"/>
+                    <constraint firstAttribute="bottom" secondItem="ooW-98-atS" secondAttribute="bottom" constant="4" id="Dck-7M-BlV"/>
                     <constraint firstAttribute="trailing" secondItem="fjD-te-Omo" secondAttribute="trailing" id="V5Q-Ue-5IE"/>
                     <constraint firstItem="fjD-te-Omo" firstAttribute="leading" secondItem="qIF-Ir-B9R" secondAttribute="leading" id="dJn-TP-nc9"/>
-                    <constraint firstAttribute="bottom" secondItem="fjD-te-Omo" secondAttribute="bottom" constant="3" id="fvd-nI-28N"/>
+                    <constraint firstAttribute="bottom" secondItem="fjD-te-Omo" secondAttribute="bottom" constant="4" id="fvd-nI-28N"/>
                     <constraint firstItem="ooW-98-atS" firstAttribute="top" secondItem="qIF-Ir-B9R" secondAttribute="top" id="iSN-l0-zct"/>
                     <constraint firstItem="ooW-98-atS" firstAttribute="leading" secondItem="qIF-Ir-B9R" secondAttribute="leading" id="kC7-ke-jbo"/>
                     <constraint firstAttribute="trailing" secondItem="ooW-98-atS" secondAttribute="trailing" id="uNH-br-miB"/>
