--- a/Klike/Sources/Controllers/KLEventPaymentFreeCell.xib
+++ b/Klike/Sources/Controllers/KLEventPaymentFreeCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -130,7 +130,7 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="q2W-ht-1p0" secondAttribute="trailing" id="5dP-iP-J3N"/>
-                    <constraint firstAttribute="bottom" secondItem="q2W-ht-1p0" secondAttribute="bottom" constant="3" id="GXW-dA-WwN"/>
+                    <constraint firstAttribute="bottom" secondItem="q2W-ht-1p0" secondAttribute="bottom" constant="4" id="GXW-dA-WwN"/>
                     <constraint firstAttribute="trailing" secondItem="SrU-zJ-fTd" secondAttribute="trailing" id="Hdh-tD-pjF"/>
                     <constraint firstItem="SrU-zJ-fTd" firstAttribute="top" secondItem="tmp-tN-lub" secondAttribute="top" id="RxO-9K-kb2"/>
                     <constraint firstItem="q2W-ht-1p0" firstAttribute="top" secondItem="tmp-tN-lub" secondAttribute="top" id="fSu-yp-Mfm"/>
