--- a/Klike/Sources/Controllers/Event/KLEventRatingPageCell.xib
+++ b/Klike/Sources/Controllers/Event/KLEventRatingPageCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -345,7 +345,7 @@
                     <constraint firstItem="ya5-DT-p8J" firstAttribute="leading" secondItem="j70-l6-ou5" secondAttribute="leading" id="bay-hr-508"/>
                     <constraint firstAttribute="trailing" secondItem="ya5-DT-p8J" secondAttribute="trailing" id="kma-5o-aOd"/>
                     <constraint firstItem="ya5-DT-p8J" firstAttribute="top" secondItem="j70-l6-ou5" secondAttribute="top" id="y0J-uk-BWy"/>
-                    <constraint firstAttribute="bottom" secondItem="ya5-DT-p8J" secondAttribute="bottom" constant="3" id="ybi-Ln-suK"/>
+                    <constraint firstAttribute="bottom" secondItem="ya5-DT-p8J" secondAttribute="bottom" constant="4" id="ybi-Ln-suK"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
