--- a/Klike/Sources/Controllers/KLEventGalleryCell.xib
+++ b/Klike/Sources/Controllers/KLEventGalleryCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -69,7 +69,7 @@
                     <constraint firstAttribute="bottom" secondItem="jM8-vB-YIc" secondAttribute="bottom" constant="3" id="08v-ZQ-JjK"/>
                     <constraint firstItem="jM8-vB-YIc" firstAttribute="top" secondItem="Adk-5S-lhU" secondAttribute="top" id="GHm-aO-IFz"/>
                     <constraint firstItem="jM8-vB-YIc" firstAttribute="leading" secondItem="Adk-5S-lhU" secondAttribute="leading" id="XOd-QJ-Caf"/>
-                    <constraint firstAttribute="bottom" secondItem="jM8-vB-YIc" secondAttribute="bottom" constant="3" id="uPb-1M-Y0R"/>
+                    <constraint firstAttribute="bottom" secondItem="jM8-vB-YIc" secondAttribute="bottom" constant="4" id="uPb-1M-Y0R"/>
                     <constraint firstAttribute="trailing" secondItem="jM8-vB-YIc" secondAttribute="trailing" id="yqm-Z0-HhW"/>
                 </constraints>
                 <variation key="default">
