--- a/Klike/Sources/Controllers/KLEventLocationCell.xib
+++ b/Klike/Sources/Controllers/KLEventLocationCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -52,7 +52,7 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="3hD-fF-mlf" secondAttribute="bottom" constant="3" id="lvp-iE-fAR"/>
+                    <constraint firstAttribute="bottom" secondItem="3hD-fF-mlf" secondAttribute="bottom" constant="4" id="lvp-iE-fAR"/>
                     <constraint firstItem="3hD-fF-mlf" firstAttribute="leading" secondItem="U8L-qU-q64" secondAttribute="leading" id="oWE-gy-VC3"/>
                     <constraint firstItem="3hD-fF-mlf" firstAttribute="top" secondItem="U8L-qU-q64" secondAttribute="top" id="rUZ-Wd-gJ9"/>
                     <constraint firstAttribute="trailing" secondItem="3hD-fF-mlf" secondAttribute="trailing" id="x9b-Fr-6zR"/>
